trying to fix ie 9 z-index woes

--- a/css/game.css
+++ b/css/game.css
@@ -67,12 +67,21 @@ height:80px;
   height:480px;
   border:3px solid #222;
   border-radius:2;
+  z-index:1;
+}
+
+#bg-images {
+  z-index:0;
+  position: absolute;
+  top:0px;
+  left:0px;
 }
 
 #bg-image {
-	z-index:1;
+	z-index:0;
 	position: absolute;
 	top:0px;
+  left:0px;
 }
 
 #score-display {
@@ -87,6 +96,7 @@ height:80px;
 }
 
 #loading {
+  z-index:10;
 	position: absolute;
 	top:100px;
 	left:150px;
@@ -100,6 +110,7 @@ height:80px;
   width:760px;
   height:480px;
   display:none;
+  z-index:10;
 }
 
 #situation {
@@ -131,6 +142,7 @@ height:80px;
   color:#fff;
   font-size:25px;
   font-family: 'Monoton',  sans-serif;
+  z-index:10;
 }
 
 #levels {
@@ -244,11 +256,13 @@ height:80px;
   color:orange;
   font-family:'VT323', sans-serif;
   font-size: 70px;
+  z-index:10;
 }
 
 #next-level {
 	color:orange;
 	cursor: pointer;
+  z-index:10;
 }
 
 .no-select {
